--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -17,8 +17,8 @@ body {
   font-weight: 500;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 100%;
-  width: 100%;
+  // height: 100%;
+  // width: 100%;
   background-color: #fff;
   color: #000;
 }
